--- a/index.html
+++ b/index.html
@@ -10,11 +10,14 @@
     <header>
         <h1>MOCKFLIX</h1>
     </header>
-    <main>
+    <div id="app">
+        
+    </div>
+    <!-- <main>
         <div id="main-container">
 
         </div>
-    </main>
+    </main> -->
 </body>
 
 
@@ -22,6 +25,7 @@
 <script src="./models/manager.js"></script>
 <script src="./services/utility-services.js"></script>
 <script src="./services/dbservices.js"></script>
+<script src="./controllers/app-controller.js"></script>
 <script src="./main.js"></script>
 </html>
 
