--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
 </body>
 
 
-<script src="./models/show.js"></script>
-<script src="./models/manager.js"></script>
-<script src="./services/utility-services.js"></script>
+<!-- <script src="./models/show.js"></script>
+<script src="./models/manager.js"></script> -->
+<!-- <script src="./services/utility-services.js"></script> -->
 <script src="./services/dbservices.js"></script>
 <script src="./controllers/app-controller.js"></script>
 <script src="./main.js"></script>
