--- a/index.html
+++ b/index.html
@@ -10,6 +10,11 @@
     <header>
         <h1>MOCKFLIX</h1>
     </header>
+    <div id="floating-input">
+        <input type="text" id="newShowInput" placeholder="Inserisci un nuovo show">
+        <button id="submitButton">Invia</button>
+        <button id="showInputButton">Inserisci un nuovo Show</button>
+    </div>
     <div id="app">
         
     </div>
@@ -28,4 +33,5 @@
 <script src="./controllers/app-controller.js"></script>
 <script src="./main.js"></script>
 </html>
+
 
